# tusb_gamepad

./: CMakeLists.txt  LICENSE  README.md  board_config.h  drivermanager.cpp  gpdriver.h  usbd_boards.h
descriptors/: DInputDescriptors.h  UARTBridgeDescriptors.h
dinput/: DInputDriver.cpp  DInputDriver.h
drivers/dinput/: DInputDriver.cpp
drivers/hid/: HIDDriver.cpp
drivers/ps3/: PS3Driver.cpp
drivers/switch/: SwitchDriver.cpp
drivers/uartbridge/: UARTBridgeDriver.cpp  UARTBridgeDriver.h  esp32_prog_task.cpp  esp32_prog_task.h  helpers.cpp  helpers.h  uart_bridge.c  uart_bridge.h  uart_bridge_task.c
drivers/usbserial/: USBSerialDriver.cpp  USBSerialDriver.h
drivers/xboxog/xid/: xid.c
hid/: HIDDriver.cpp  HIDDriver.h
ps3/: PS3Driver.cpp  PS3Driver.h
psclassic/: PSClassicDriver.cpp  PSClassicDriver.h
src/: Gamepad.c  Gamepad.h  board_config.h  drivermanager.cpp  drivermanager.h  inputmodes.h  tusb_gamepad.cpp  tusb_gamepad.h  usbdriver.cpp
src/descriptors/: PS3Descriptors.h  SwitchDescriptors.h  UARTBridgeDescriptors.h  USBSerialDescriptors.h  XInputDescriptors.h  XboxOriginalDescriptors.h
src/drivers/: gpdriver.h
src/drivers/dinput/: DInputDriver.cpp  DInputDriver.h
src/drivers/hid/: HIDDriver.cpp  HIDDriver.h
src/drivers/ps3/: PS3Driver.cpp  PS3Driver.h
src/drivers/psclassic/: PSClassicDriver.cpp  PSClassicDriver.h
src/drivers/shared/: driverhelper.h  scaling.cpp  scaling.h
src/drivers/switch/: SwitchDriver.cpp  SwitchDriver.h
src/drivers/uartbridge/: UARTBridgeDriver.cpp  UARTBridgeDriver.h  esp32_prog_task.cpp  esp32_prog_task.h  uart_bridge.c  uart_bridge.h  uart_bridge_task.cpp  uart_bridge_task.h
src/drivers/usbserial/: USBSerialDriver.cpp  USBSerialDriver.h
src/drivers/xboxog/: XboxOriginalDriver.cpp  XboxOriginalDriver.h
src/drivers/xboxog/xid/: xid.c  xid.h  xid_driver.h  xid_gamepad.c  xid_remote.c  xid_steelbattalion.c
src/drivers/xinput/: XInputDriver.cpp  XInputDriver.h
src/utilities/: log.cpp
switch/: SwitchDriver.cpp  SwitchDriver.h
usbserial/: USBSerialDriver.cpp  USBSerialDriver.h
xboxog/: XboxOriginalDriver.cpp  XboxOriginalDriver.h
xinput/: XInputDriver.cpp  XInputDriver.h
